FIx Height gap 404 qa

--- a/src/sass/404/page_404.sass
+++ b/src/sass/404/page_404.sass
@@ -1,5 +1,9 @@
 @import '../partials/alias-mixins'
 
+.header-404__hold
+    @include desk
+        margin: 5.5rem 0 0 0
+
 .header-404 p
     margin: 2rem 0  6rem
     @include desk
